fix #437; dark mode buttons colored properly

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -340,4 +340,8 @@ body.dark {
     background-color: #181818;
     border-color: #181818;
   }
+
+  .btn-link {
+  	color: #fff;
+  }
 }
